# libiconv-native

./: .gitignore  CMakeLists.txt  README.MD
cmake/: iconv.pc.in  iconvConfig.cmake.in
man/: Makefile
msvc/16/: charset.vcxproj  iconv.vcxproj  libiconv.sln
msvc/17/: charset.vcxproj  iconv.vcxproj
msvc/18/: charset.vcxproj  iconv.vcxproj  libiconv.sln
prebuilt/windows/x64/: charset.lib  iconv.lib
prebuilt/windows/x86/: charset.lib
