# CMakeLists.txt for GNU libiconv 1.18
# Copyright (C) 2024 Free Software Foundation, Inc.
# 
# This file is part of the GNU LIBICONV Library.

cmake_minimum_required(VERSION 3.16)

project(libiconv
    VERSION 1.18
    DESCRIPTION "GNU libiconv - Character set conversion library"
    HOMEPAGE_URL "https://www.gnu.org/software/libiconv/"
    LANGUAGES C
)

# ==============================================================================
# CMake Options 
# ==============================================================================

option(BUILD_SHARED_LIBS "Build shared libraries" ON)
option(ICONV_ENABLE_EXTRA "Enable a few rarely used encodings" OFF)
option(ICONV_EMBED_MODE "Enable embed mode for static linking (renames symbols to avoid conflicts)" OFF)

# Embed mode embed prefix (customizable)
set(ICONV_EMBED_PREFIX "embed_" CACHE STRING "Symbol prefix for embed mode")

# ==============================================================================
# CMake configuration
# ==============================================================================

set(CMAKE_C_STANDARD 99)
set(CMAKE_C_STANDARD_REQUIRED ON)

include(GNUInstallDirs)
include(CheckIncludeFile)
include(CheckFunctionExists)
include(CheckSymbolExists)
include(CheckTypeSize)
include(CMakePackageConfigHelpers)
include(TestBigEndian)

# ==============================================================================
# System/Compiler detection
# ==============================================================================

# Detect endianness
test_big_endian(WORDS_BIGENDIAN)
if(NOT WORDS_BIGENDIAN)
    set(WORDS_LITTLEENDIAN 1)
endif()

# Check for headers
check_include_file(dlfcn.h HAVE_DLFCN_H)
check_include_file(inttypes.h HAVE_INTTYPES_H)
check_include_file(langinfo.h HAVE_LANGINFO_H)
check_include_file(locale.h HAVE_LOCALE_H)
check_include_file(memory.h HAVE_MEMORY_H)
check_include_file(stddef.h HAVE_STDDEF_H)
check_include_file(stdint.h HAVE_STDINT_H)
check_include_file(stdlib.h HAVE_STDLIB_H)
check_include_file(string.h HAVE_STRING_H)
check_include_file(strings.h HAVE_STRINGS_H)
check_include_file(sys/stat.h HAVE_SYS_STAT_H)
check_include_file(sys/types.h HAVE_SYS_TYPES_H)
check_include_file(unistd.h HAVE_UNISTD_H)
check_include_file(wchar.h HAVE_WCHAR_H)
check_include_file(errno.h HAVE_ERRNO_H)
check_include_file(fcntl.h HAVE_FCNTL_H)
check_include_file(io.h HAVE_IO_H)

# Check for functions
check_function_exists(getc_unlocked HAVE_GETC_UNLOCKED)
check_function_exists(mbrtowc HAVE_MBRTOWC)
check_function_exists(wcrtomb HAVE_WCRTOMB)
check_function_exists(mbsinit HAVE_MBSINIT)
check_function_exists(setlocale HAVE_SETLOCALE)
check_function_exists(memmove HAVE_MEMMOVE)

# Check if we need USE_MBSTATE_T
if(HAVE_WCRTOMB OR HAVE_MBRTOWC)
    set(USE_MBSTATE_T 1)
else()
    set(USE_MBSTATE_T 0)
endif()

# Check wchar.h standalone
include(CheckCSourceCompiles)
check_c_source_compiles("
    #include <wchar.h>
    wchar_t w;
    int main() { return 0; }
" WCHAR_H_STANDALONE)
if(WCHAR_H_STANDALONE)
    set(BROKEN_WCHAR_H 0)
else()
    set(BROKEN_WCHAR_H 1)
endif()

# Platform-specific settings
if(WIN32)
    add_definitions(-D_CRT_SECURE_NO_WARNINGS)
    add_definitions(-D_CRT_NONSTDC_NO_DEPRECATE)
endif()

if(MSVC)
    add_compile_options(/W3)
    # Disable specific warnings: 
    # 4996: deprecated functions
    # 4244, 4267: conversion warnings
    # 4018: signed/unsigned mismatch
    # 4311: pointer truncation (gperf generated code)
    # 4090: different const qualifiers  
    # 4005: macro redefinition
    add_compile_options(/wd4996 /wd4244 /wd4267 /wd4018 /wd4311 /wd4090 /wd4005)
endif()

# ==============================================================================
# Configure options
# ==============================================================================

if(ICONV_ENABLE_EXTRA)
    set(ENABLE_EXTRA 1)
else()
    set(ENABLE_EXTRA 0)
endif()

set(ICONV_CONST "")

# ==============================================================================
# Create output directories
# ==============================================================================

file(MAKE_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/lib")
file(MAKE_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/include")
file(MAKE_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/libcharset/include")

# ==============================================================================
# Generate config.h for lib
# ==============================================================================

set(CONFIG_H_CONTENT "/* config.h - Generated by CMake for libiconv */
#ifndef LIBICONV_CONFIG_H
#define LIBICONV_CONFIG_H

/* Define to 1 if you have the <dlfcn.h> header file. */
#cmakedefine HAVE_DLFCN_H 1

/* Define to 1 if you have the <inttypes.h> header file. */
#cmakedefine HAVE_INTTYPES_H 1

/* Define to 1 if you have the <langinfo.h> header file. */
#cmakedefine HAVE_LANGINFO_H 1

/* Define to 1 if you have the <locale.h> header file. */
#cmakedefine HAVE_LOCALE_H 1

/* Define to 1 if you have the <memory.h> header file. */
#cmakedefine HAVE_MEMORY_H 1

/* Define to 1 if you have the <stddef.h> header file. */
#cmakedefine HAVE_STDDEF_H 1

/* Define to 1 if you have the <stdint.h> header file. */
#cmakedefine HAVE_STDINT_H 1

/* Define to 1 if you have the <stdlib.h> header file. */
#cmakedefine HAVE_STDLIB_H 1

/* Define to 1 if you have the <string.h> header file. */
#cmakedefine HAVE_STRING_H 1

/* Define to 1 if you have the <strings.h> header file. */
#cmakedefine HAVE_STRINGS_H 1

/* Define to 1 if you have the <sys/stat.h> header file. */
#cmakedefine HAVE_SYS_STAT_H 1

/* Define to 1 if you have the <sys/types.h> header file. */
#cmakedefine HAVE_SYS_TYPES_H 1

/* Define to 1 if you have the <unistd.h> header file. */
#cmakedefine HAVE_UNISTD_H 1

/* Define to 1 if you have the <wchar.h> header file. */
#cmakedefine HAVE_WCHAR_H 1

/* Define to 1 if you have the <errno.h> header file. */
#cmakedefine HAVE_ERRNO_H 1

/* Define to 1 if you have the <fcntl.h> header file. */
#cmakedefine HAVE_FCNTL_H 1

/* Define to 1 if you have the <io.h> header file. */
#cmakedefine HAVE_IO_H 1

/* Define to 1 if you have the getc_unlocked() function. */
#cmakedefine HAVE_GETC_UNLOCKED 1

/* Define if you have the mbrtowc() function. */
#cmakedefine HAVE_MBRTOWC 1

/* Define if you have the wcrtomb() function. */
#cmakedefine HAVE_WCRTOMB 1

/* Define to 1 if you have the mbsinit() function. */
#cmakedefine HAVE_MBSINIT 1

/* Define to 1 if you have the setlocale() function. */
#cmakedefine HAVE_SETLOCALE 1

/* Define to 1 if you have the memmove() function. */
#cmakedefine HAVE_MEMMOVE 1

/* Define to 1 if the machine's byte ordering is little endian. */
#cmakedefine WORDS_LITTLEENDIAN 1

/* Define to 1 to enable a few rarely used encodings. */
#cmakedefine ENABLE_EXTRA 1

/* Define as const if the declaration of iconv() needs const. */
#define ICONV_CONST ${ICONV_CONST}

/* For Windows DLL */
#if defined(_MSC_VER) && defined(DLL_EXPORT)
# define DLL_VARIABLE __declspec(dllimport)
#else
# define DLL_VARIABLE
#endif

/* Define to 'int' if <sys/types.h> doesn't define. */
/* #undef mode_t */

/* Define as a signed type of the same size as size_t. */
#if defined(_WIN32) && !defined(ssize_t)
# ifdef _WIN64
typedef long long ssize_t;
# else
typedef int ssize_t;
# endif
#endif

#endif /* LIBICONV_CONFIG_H */
")

file(WRITE "${CMAKE_CURRENT_BINARY_DIR}/lib/config.h.in" "${CONFIG_H_CONTENT}")
configure_file("${CMAKE_CURRENT_BINARY_DIR}/lib/config.h.in" 
               "${CMAKE_CURRENT_BINARY_DIR}/lib/config.h" @ONLY)

# ==============================================================================
# Generate localcharset.h for libcharset
# ==============================================================================

set(LOCALCHARSET_H_CONTENT "/* localcharset.h - Generated by CMake */
#ifndef _LOCALCHARSET_H
#define _LOCALCHARSET_H

#ifdef __cplusplus
extern \"C\" {
#endif

/* Determine the current locale's character encoding, and canonicalize it
   into one of the canonical names listed in the manual. */
extern const char * locale_charset (void);

#ifdef __cplusplus
}
#endif

#endif /* _LOCALCHARSET_H */
")

file(WRITE "${CMAKE_CURRENT_BINARY_DIR}/libcharset/include/localcharset.h" "${LOCALCHARSET_H_CONTENT}")

# ==============================================================================
# Generate iconv.h
# ==============================================================================

# Symbol prefix for embed mode
if(ICONV_EMBED_MODE)
    set(ICONV_SYMBOL_PREFIX "${ICONV_EMBED_PREFIX}")
else()
    set(ICONV_SYMBOL_PREFIX "")
endif()

set(ICONV_H_CONTENT "/* Copyright (C) 1999-2024 Free Software Foundation, Inc.
   This file is part of the GNU LIBICONV Library.
   Generated by CMake. */

#ifndef _LIBICONV_H
#define _LIBICONV_H

#ifdef __cplusplus
extern \"C\" {
#endif

#define _LIBICONV_VERSION 0x0112    /* version number: (major<<8) + minor */

#if defined(LIBICONV_DLL) && (defined(_WIN32) || defined(__CYGWIN__))
# if defined(BUILDING_LIBICONV)
#  define LIBICONV_DLL_EXPORTED __declspec(dllexport)
# else
#  define LIBICONV_DLL_EXPORTED __declspec(dllimport)
# endif
#else
# define LIBICONV_DLL_EXPORTED
#endif

/* Rename _libiconv_version symbol for embed mode. */
#define _libiconv_version ${ICONV_SYMBOL_PREFIX}_libiconv_version
extern LIBICONV_DLL_EXPORTED int _libiconv_version;

#ifdef __cplusplus
}
#endif

/* Define iconv_t ourselves. */
#undef iconv_t
#define iconv_t ${ICONV_SYMBOL_PREFIX}libiconv_t
typedef void* iconv_t;

/* Get size_t declaration. */
#include <stddef.h>

/* Get errno declaration and values. */
#include <errno.h>

#ifdef __cplusplus
extern \"C\" {
#endif

/* Allocates descriptor for code conversion from encoding 'fromcode' to
   encoding 'tocode'. */
#define iconv_open ${ICONV_SYMBOL_PREFIX}libiconv_open
extern LIBICONV_DLL_EXPORTED iconv_t iconv_open (const char* tocode, const char* fromcode);

/* Converts, using conversion descriptor 'cd', at most '*inbytesleft' bytes
   starting at '*inbuf', writing at most '*outbytesleft' bytes starting at
   '*outbuf'. */
#define iconv ${ICONV_SYMBOL_PREFIX}libiconv
extern LIBICONV_DLL_EXPORTED size_t iconv (iconv_t cd, char* * inbuf, size_t *inbytesleft, char* * outbuf, size_t *outbytesleft);

/* Frees resources allocated for conversion descriptor 'cd'. */
#define iconv_close ${ICONV_SYMBOL_PREFIX}libiconv_close
extern LIBICONV_DLL_EXPORTED int iconv_close (iconv_t cd);

#ifdef __cplusplus
}
#endif

/* Nonstandard extensions. */

#if ${USE_MBSTATE_T}
#if ${BROKEN_WCHAR_H}
#include <stddef.h>
#include <stdio.h>
#include <time.h>
#endif
#include <wchar.h>
#endif

#ifdef __cplusplus
extern \"C\" {
#endif

/* A type that holds all memory needed by a conversion descriptor.
   A pointer to such an object can be used as iconv_t. */
typedef struct {
  void* dummy1[28];
#if ${USE_MBSTATE_T}
  mbstate_t dummy2;
#endif
} iconv_allocation_t;

/* Allocates descriptor for code conversion from encoding 'fromcode' to
   encoding 'tocode' into preallocated memory. */
#define iconv_open_into ${ICONV_SYMBOL_PREFIX}libiconv_open_into
extern LIBICONV_DLL_EXPORTED int iconv_open_into (const char* tocode, const char* fromcode,
                            iconv_allocation_t* resultp);

/* Control of attributes. */
#define iconvctl ${ICONV_SYMBOL_PREFIX}libiconvctl
extern LIBICONV_DLL_EXPORTED int iconvctl (iconv_t cd, int request, void* argument);

/* Hook performed after every successful conversion of a Unicode character. */
typedef void (*iconv_unicode_char_hook) (unsigned int uc, void* data);
/* Hook performed after every successful conversion of a wide character. */
typedef void (*iconv_wide_char_hook) (wchar_t wc, void* data);
/* Set of hooks. */
struct iconv_hooks {
  iconv_unicode_char_hook uc_hook;
  iconv_wide_char_hook wc_hook;
  void* data;
};

/* Fallback function.  Invoked when a small number of bytes could not be
   converted to a Unicode character. */
typedef void (*iconv_unicode_mb_to_uc_fallback)
             (const char* inbuf, size_t inbufsize,
              void (*write_replacement) (const unsigned int *buf, size_t buflen,
                                         void* callback_arg),
              void* callback_arg,
              void* data);
/* Fallback function.  Invoked when a Unicode character could not be converted
   to the target encoding. */
typedef void (*iconv_unicode_uc_to_mb_fallback)
             (unsigned int code,
              void (*write_replacement) (const char *buf, size_t buflen,
                                         void* callback_arg),
              void* callback_arg,
              void* data);
#if ${USE_MBSTATE_T}
/* Fallback function.  Invoked when a number of bytes could not be converted to
   a wide character. */
typedef void (*iconv_wchar_mb_to_wc_fallback)
             (const char* inbuf, size_t inbufsize,
              void (*write_replacement) (const wchar_t *buf, size_t buflen,
                                         void* callback_arg),
              void* callback_arg,
              void* data);
/* Fallback function.  Invoked when a wide character could not be converted to
   the target encoding. */
typedef void (*iconv_wchar_wc_to_mb_fallback)
             (wchar_t code,
              void (*write_replacement) (const char *buf, size_t buflen,
                                         void* callback_arg),
              void* callback_arg,
              void* data);
#else
typedef void (*iconv_wchar_mb_to_wc_fallback) ();
typedef void (*iconv_wchar_wc_to_mb_fallback) ();
#endif

/* Set of fallbacks. */
struct iconv_fallbacks {
  iconv_unicode_mb_to_uc_fallback mb_to_uc_fallback;
  iconv_unicode_uc_to_mb_fallback uc_to_mb_fallback;
  iconv_wchar_mb_to_wc_fallback mb_to_wc_fallback;
  iconv_wchar_wc_to_mb_fallback wc_to_mb_fallback;
  void* data;
};

/* Surfaces.
   The concept of surfaces is described in the 'recode' manual. */
#define ICONV_SURFACE_NONE             0
/* In EBCDIC encodings, 0x15 (which encodes the \"newline function\", see the
   Unicode standard, chapter 5) maps to U+000A instead of U+0085.  This is
   for interoperability with C programs and Unix environments on z/OS. */
#define ICONV_SURFACE_EBCDIC_ZOS_UNIX  1

/* Requests for iconvctl. */
#define ICONV_TRIVIALP                    0  /* int *argument */
#define ICONV_GET_TRANSLITERATE           1  /* int *argument */
#define ICONV_SET_TRANSLITERATE           2  /* const int *argument */
#define ICONV_GET_DISCARD_ILSEQ           3  /* int *argument */
#define ICONV_SET_DISCARD_ILSEQ           4  /* const int *argument */
#define ICONV_SET_HOOKS                   5  /* const struct iconv_hooks *argument */
#define ICONV_SET_FALLBACKS               6  /* const struct iconv_fallbacks *argument */
#define ICONV_GET_FROM_SURFACE            7  /* unsigned int *argument */
#define ICONV_SET_FROM_SURFACE            8  /* const unsigned int *argument */
#define ICONV_GET_TO_SURFACE              9  /* unsigned int *argument */
#define ICONV_SET_TO_SURFACE             10  /* const unsigned int *argument */
#define ICONV_GET_DISCARD_INVALID        11  /* int *argument */
#define ICONV_SET_DISCARD_INVALID        12  /* const int *argument */
#define ICONV_GET_DISCARD_NON_IDENTICAL  13  /* int *argument */
#define ICONV_SET_DISCARD_NON_IDENTICAL  14  /* const int *argument */

/* Listing of locale independent encodings. */
#define iconvlist ${ICONV_SYMBOL_PREFIX}libiconvlist
extern LIBICONV_DLL_EXPORTED void iconvlist (int (*do_one) (unsigned int namescount,
                                      const char * const * names,
                                      void* data),
                       void* data);

/* Canonicalize an encoding name. */
#define iconv_canonicalize ${ICONV_SYMBOL_PREFIX}libiconv_canonicalize
extern LIBICONV_DLL_EXPORTED const char * iconv_canonicalize (const char * name);

/* Support for relocatable packages. */

/* Sets the original and the current installation prefix of the package. */
extern LIBICONV_DLL_EXPORTED void ${ICONV_SYMBOL_PREFIX}libiconv_set_relocation_prefix (const char *orig_prefix,
                                            const char *curr_prefix);

#ifdef __cplusplus
}
#endif

#endif /* _LIBICONV_H */
")

file(WRITE "${CMAKE_CURRENT_BINARY_DIR}/include/iconv.h" "${ICONV_H_CONTENT}")

# ==============================================================================
# libcharset library (always static, linked into iconv)
# ==============================================================================

set(LIBCHARSET_SOURCES
    ${CMAKE_CURRENT_SOURCE_DIR}/libcharset/lib/localcharset.c
)

# Build charset as a static library that gets linked into iconv
add_library(charset STATIC ${LIBCHARSET_SOURCES})

target_include_directories(charset
    PRIVATE
        ${CMAKE_CURRENT_BINARY_DIR}/lib
        ${CMAKE_CURRENT_BINARY_DIR}/libcharset/include
        ${CMAKE_CURRENT_SOURCE_DIR}/libcharset/include
    PUBLIC
        $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}/libcharset/include>
        $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
)

target_compile_definitions(charset PRIVATE
    HAVE_CONFIG_H
    LIBDIR="${CMAKE_INSTALL_FULL_LIBDIR}"
    IN_LIBRARY
)

if(WIN32)
    target_compile_definitions(charset PRIVATE WINDOWS_NATIVE)
endif()

set_target_properties(charset PROPERTIES
    OUTPUT_NAME charset
)

# Symbol visibility for embed mode (static builds)
if(ICONV_EMBED_MODE)
    set_target_properties(charset PROPERTIES
        C_VISIBILITY_PRESET hidden
        VISIBILITY_INLINES_HIDDEN ON
    )
endif()

# ==============================================================================
# libiconv library
# ==============================================================================

set(LIBICONV_SOURCES
    ${CMAKE_CURRENT_SOURCE_DIR}/lib/iconv.c
)

add_library(iconv ${LIBICONV_SOURCES})

target_include_directories(iconv
    PRIVATE
        ${CMAKE_CURRENT_BINARY_DIR}/lib
        ${CMAKE_CURRENT_BINARY_DIR}/include
        ${CMAKE_CURRENT_BINARY_DIR}/libcharset/include
        ${CMAKE_CURRENT_SOURCE_DIR}/lib
        ${CMAKE_CURRENT_SOURCE_DIR}/libcharset/include
    PUBLIC
        $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}/include>
        $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
)

target_compile_definitions(iconv PRIVATE
    HAVE_CONFIG_H
    BUILDING_LIBICONV
    BUILDING_DLL
    NO_XMALLOC
    IN_LIBRARY
    LIBDIR="${CMAKE_INSTALL_FULL_LIBDIR}"
    $<$<BOOL:${BUILD_SHARED_LIBS}>:LIBICONV_DLL>
    $<$<BOOL:${BUILD_SHARED_LIBS}>:DLL_EXPORT>
    $<$<BOOL:${ICONV_ENABLE_EXTRA}>:ENABLE_EXTRA=1>
)

target_link_libraries(iconv PRIVATE charset)

set_target_properties(iconv PROPERTIES
    VERSION ${PROJECT_VERSION}
    SOVERSION ${PROJECT_VERSION_MAJOR}
    OUTPUT_NAME iconv
)

# Symbol visibility for embed mode (static builds)
if(ICONV_EMBED_MODE)
    set_target_properties(iconv PROPERTIES
        C_VISIBILITY_PRESET hidden
        VISIBILITY_INLINES_HIDDEN ON
    )
endif()

# Alias target for modern CMake usage
add_library(Iconv::Iconv ALIAS iconv)

# ==============================================================================
# Installation
# ==============================================================================

# Install targets
install(TARGETS iconv charset
    EXPORT iconvTargets
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
)

# Install headers
install(FILES ${CMAKE_CURRENT_BINARY_DIR}/include/iconv.h
    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
)

install(FILES ${CMAKE_CURRENT_BINARY_DIR}/libcharset/include/localcharset.h
    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
)

# ==============================================================================
# CMake Package Configuration
# ==============================================================================

# Create cmake directory
file(MAKE_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/cmake")

# Export targets for use from the build tree
export(EXPORT iconvTargets
    FILE "${CMAKE_CURRENT_BINARY_DIR}/cmake/iconvTargets.cmake"
    NAMESPACE Iconv::
)

# Create iconvConfig.cmake content directly
set(ICONV_CONFIG_CONTENT "@PACKAGE_INIT@

include(CMakeFindDependencyMacro)

include(\"\${CMAKE_CURRENT_LIST_DIR}/iconvTargets.cmake\")

check_required_components(iconv)

if(NOT TARGET Iconv::Iconv)
    add_library(Iconv::Iconv ALIAS iconv)
endif()
")

file(WRITE "${CMAKE_CURRENT_SOURCE_DIR}/cmake/iconvConfig.cmake.in" "${ICONV_CONFIG_CONTENT}")

configure_package_config_file(
    "${CMAKE_CURRENT_SOURCE_DIR}/cmake/iconvConfig.cmake.in"
    "${CMAKE_CURRENT_BINARY_DIR}/cmake/iconvConfig.cmake"
    INSTALL_DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/iconv
)

write_basic_package_version_file(
    "${CMAKE_CURRENT_BINARY_DIR}/cmake/iconvConfigVersion.cmake"
    VERSION ${PROJECT_VERSION}
    COMPATIBILITY SameMajorVersion
)

# Install package config files
install(EXPORT iconvTargets
    FILE iconvTargets.cmake
    NAMESPACE Iconv::
    DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/iconv
)

install(FILES
    "${CMAKE_CURRENT_BINARY_DIR}/cmake/iconvConfig.cmake"
    "${CMAKE_CURRENT_BINARY_DIR}/cmake/iconvConfigVersion.cmake"
    DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/iconv
)

# ==============================================================================
# pkg-config file
# ==============================================================================

set(ICONV_PC_CONTENT "prefix=@CMAKE_INSTALL_PREFIX@
exec_prefix=\${prefix}
libdir=\${prefix}/@CMAKE_INSTALL_LIBDIR@
includedir=\${prefix}/@CMAKE_INSTALL_INCLUDEDIR@

Name: iconv
Description: GNU libiconv - Character set conversion library
Version: @PROJECT_VERSION@
Libs: -L\${libdir} -liconv
Cflags: -I\${includedir}
")

file(WRITE "${CMAKE_CURRENT_SOURCE_DIR}/cmake/iconv.pc.in" "${ICONV_PC_CONTENT}")

configure_file(
    "${CMAKE_CURRENT_SOURCE_DIR}/cmake/iconv.pc.in"
    "${CMAKE_CURRENT_BINARY_DIR}/iconv.pc"
    @ONLY
)

install(FILES "${CMAKE_CURRENT_BINARY_DIR}/iconv.pc"
    DESTINATION ${CMAKE_INSTALL_LIBDIR}/pkgconfig
)

# ==============================================================================
# Summary
# ==============================================================================

message(STATUS "")
message(STATUS "libiconv ${PROJECT_VERSION} configuration:")
message(STATUS "  Build type: ${CMAKE_BUILD_TYPE}")
message(STATUS "  Shared libraries: ${BUILD_SHARED_LIBS}")
message(STATUS "  Enable extra encodings: ${ICONV_ENABLE_EXTRA}")
message(STATUS "  Install prefix: ${CMAKE_INSTALL_PREFIX}")
message(STATUS "")
